# systemshock

./: .clang-format  .gitignore  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.32bit.txt  CMakeLists.txt  CMakeSettings.json  COMPILING.md  GAME_LIB.vcxproj  GAME_LIB.vcxproj.filters  Makefile  README.md  SystemShock.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  appveyor.yml  build.bat  build_deps.sh  build_msvc.sh  build_win32.sh  build_win64.sh  build_windows.sh  cmake_install.cmake  conanfile.py  conanfile.txt  default.nix  run_osx.sh  systemshock.exp  systemshock.vcxproj  systemshock.vcxproj.filters
src/Libraries/: 2D_LIB.vcxproj  2D_LIB.vcxproj.filters  3D_LIB.vcxproj  3D_LIB.vcxproj.filters  AFILE_LIB.vcxproj  AFILE_LIB.vcxproj.filters  CMakeLists.txt  DSTRUCT_LIB.vcxproj  DSTRUCT_LIB.vcxproj.filters  EDMS_LIB.vcxproj  EDMS_LIB.vcxproj.filters  FIXPP_LIB.vcxproj  FIXPP_LIB.vcxproj.filters  FIX_LIB.vcxproj  FIX_LIB.vcxproj.filters  GR_LIB.vcxproj  GR_LIB.vcxproj.filters  INPUT_LIB.vcxproj  INPUT_LIB.vcxproj.filters  LG_LIB.vcxproj  LG_LIB.vcxproj.filters  Makefile  PALETTE_LIB.vcxproj  PALETTE_LIB.vcxproj.filters  RES_LIB.vcxproj  RES_LIB.vcxproj.filters  RND_LIB.vcxproj  RND_LIB.vcxproj.filters  UI_LIB.vcxproj  UI_LIB.vcxproj.filters  VOX_LIB.vcxproj  VOX_LIB.vcxproj.filters  cmake_install.cmake
src/Libraries/2D/: TestInitMac.c
src/Libraries/2D/Source/: 2d.h  2dTest.c  2dTest.c.nope  ChnFuncs.c  FloorLoop.s  InitMac2d.c  LinearLoop.s  MacDev.c  MacDev.h  PermapLoop.s  StateStk.c  bit.c  bit.h  bitmap.c  blend.c  blndat.h  blnfcn.h  canvas.c  chain.c  chrwid.c  close.c  cnvtab.c  ctxmac.h  detect.c  init.c  init_2D.h  invtab.c  linfcn.h  lintab.c  lintab.h  mode.c  pal.c  permap.c  persetup.c  pertyp.h  rgb.c  rgb.h  screen.c  sscrn.c  status_2D.h  (+14 more)
src/Libraries/2D/Source/Clip/: clpclin.c  clpf24.c  clpfcn.h  clplin.c  clpltab.c  clpmono.c  clpply.c  clppoly.c  clprect.c  clpslin.c
src/Libraries/2D/Source/Flat8/: FL8OPL.c  Fl8F.c  fl8bft.h  fl8bl.c  fl8bldbl.c  fl8cft.h  fl8chfl8.c  fl8clear.c  fl8clin.c  fl8clin.h  fl8cnv.c  fl8cop.c  fl8cply.c  fl8ctp.c  fl8dbl.c  fl8fl8.c  fl8fl8c.c  fl8fl8m.c  fl8fltr2.c  fl8ft.c  fl8g24.c  fl8lf.c  (+45 more)
src/Libraries/2D/TestSource/: SimpMain.c  SimpleMain.c  xSimpMain.c
src/Libraries/3D/Source/: 3d.h  3dTest.c  3dinterp.h  Bitmap.c  GlobalV.c  GlobalV.h  INTERP.c (orig)  alloc.c  clip.c  detail.c  fauxrend.h  fov.c  instance.c  interp.c  light.c  matrix.c  points.c  polygon.c  slew.c  tmap.c  vector.c
src/Libraries/3D/Tests/: 3dTest.c  BitmapTest.c  BoxTest.c  GenBoxTest.c  ObjTest.c  TMAPTest.c  TestInitMac.c
src/Libraries/AFILE/Source/: AddSoundToMovie.c  DumpHex.c  MovConv.c  MovConvDiv.c  OldAnimConv.c  PalExtract.c  QTConv.c  SubTitles.c  afile.c  afile.h  amov.c  animconv.c  aqtm.c  circbuff.h  compose.c  compose.h  draw4x4.cpp  draw4x4.h  huff.h  huffde.cpp  movie.c  movie.h  movinfo.c  quikconv.c  quikdump.c  quiktime.h  quikwrit.c
src/Libraries/AFILE/Tests/: MovConv.c  MovConvDiv.c  OldAnimConv.c  PalExtract.c  QTConv.c  animconv.c  movinfo.c  playmov.c  quikconv.c  quikdump.c  quiktime.c
src/Libraries/DSTRUCT/Source/: array.c  hash.c  hash.h  llist.c  llist.h  lllist.c  pqueue.c  pqueue.h  rect.c  rect.h  slist.h
src/Libraries/DSTRUCT/Tests/: hashtest.c  hashtest.y  kcHashTest.cp
src/Libraries/EDMS/Source/: Old EDMS.h  collide.cc  edms.h  edms_chk.h  edms_int.h  edms_mod.h  edms_vt.h  externs.h  globals.cc  idof.h  interfac.cc  intrsect.cc  phy_tool.cc  physhand.h  soliton.cc  ss_flet.h  terrain.cc
src/Libraries/EDMS/Tests/: SIMPLE.CC  TestInitMac.c  btest.c  kcTestEDMS.cp  mtest.c  simple.cc  test_bed.cp
src/Libraries/FIX/Source/: FixAsm.s  FixMath.h  FixMath.s  MakeTables.c  f_exp.c  fix.c  fix.h  fix24.c  fix_pow.c  fix_sqrt.c  fixsprnt.c  otrigtab.h  trigtab.h
src/Libraries/FIX/Tests/: fix24tst.c
src/Libraries/FIXPP/Source/: fixpp.cc  fixpp.cpp  fixpp.h
src/Libraries/FIXPP/Tests/: FixppTest.cc  fixpptst.cc
src/Libraries/H/: 2dres.h  base.h  keydefs.h  lg_types.h
src/Libraries/INPUT/Source/: kb.h  kbMac.c  kbcook.c  kbcook.h  kbglob.h  mouse.c  mouse.h  sdl_events.c  sdl_events.h
src/Libraries/INPUT/Tests/: hotkey.c  hotkey.h  hottest.c  mousetst.c  testcook.c
src/Libraries/LG/Source/: LGmem.c  dbg.c  dbg.h  lg.h  lgsprntf.c  lgsprntf.h  memall.c  memall.h  stack.c  tmpalloc.c
src/Libraries/LG/Tests/: stacktst.c
src/Libraries/PALETTE/Source/: palette.c
src/Libraries/PALETTE/Tests/: TestInitMac.c  paltest.c
src/Libraries/RES/Source/: caseless.c  lzw.c  lzw.h  refacc.c  res.c  res.h  res_.h  resacc.c  resbuild.c  resfile.c  resformat.c  resformat.h  resload.c  resmake.c  restypes.c  restypes.h
src/Libraries/RND/Source/: rnd.c
src/Libraries/SND/Source/: dig_init.c  dig_ops.c  lgsndx.h  master.c  mid_init.c  mid_ops.c
src/Libraries/SND/Tests/: MidiTest.c  SndCaps.c  sndtest.c
src/Libraries/UI/Source/: butarray.c  butarray.h  curdrw.c  cursors.c  cursors.h  event.c  event.h  fakefont.h  gadgets.c  gadgets.h  hotkey.c  hotkey.h  menu.c  menu.h  monofont.c  qboxgadg.c  qboxgadg.h  realfont.c  region.c  region.h  slab.h  slider.c  textgadg.c  texttool.c  texttool.h  tng.c  tng.h  tngapp.h  tngbarry.c  tngbarry.h  tngfont.c  tngmenu.c  tngmenu.h  tngplain.c  tngpushb.c  tngpushb.h  tngqbox.c  tngqbox.h  tngslidr.c  tngslidr.h  (+8 more)
src/Libraries/UI/Tests/: hottest.c  uitest.c
src/Libraries/VOX/Source/: vox.h  vox2d.c  vox3d.c  voxinit.c
src/Libraries/VOX/Tests/: VoxTest.c
src/Libraries/adlmidi/: adldata.cpp  adldata.hh  adlmidi.cpp  adlmidi_bankmap.h  adlmidi_load.cpp  adlmidi_midiplay.cpp  adlmidi_mus2mid.hpp  adlmidi_opl3.cpp  adlmidi_private.cpp  adlmidi_private.hpp  adlmidi_sequencer.cpp  adlmidi_xmi2mid.hpp  cvt_mus2mid.hpp  cvt_xmi2mid.hpp  midi_sequencer.h  midi_sequencer.hpp  midi_sequencer_impl.hpp
src/Libraries/adlmidi/chips/: dosbox_opl3.cpp  dosbox_opl3.h  nuked_opl3.cpp  nuked_opl3.h  nuked_opl3_v174.cpp  nuked_opl3_v174.h  opl_chip_base.h
src/Libraries/adlmidi/include/: adlmidi.h
src/Libraries/adlmidi/wopl/: wopl_file.h
(+507 files in other folders)
